# wasm-boids

./: .gitignore  Cargo.toml  README.md  after.txt  before.txt  boids.ts  package-lock.json  perf.data
benches/: bench.rs
src/: lib.rs
www/: index.html  index.js  index.ts  package-lock.json  package.json  tsconfig.json
