[package]
name = "wasm-boids"
version = "0.1.0"
authors = ["Christopher Fleetwood <fleetwoodpersonal@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
kdtree = "0.6.0"
js-sys = "0.3.52"

console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version="0.3.52"
features = [
    "console"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
